Fixed footer covering up main section text on index.html on smaller screen widths

--- a/styles/index.css
+++ b/styles/index.css
@@ -21,10 +21,17 @@ section {
 @media (width < 1000px) {
   main {
     padding: 0 10%;
+    margin-bottom: 15%;
   }
 
   #about-me {
     flex-direction: column;
+  }
+}
+
+@media (width < 400px) {
+  main {
+    margin-bottom: 25%;
   }
 }
 
